--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "pdf-scrubber",
     "version": "1.0.0",
-    "main": "dist-electron/main.js",
+    "main": "electron/main.ts",
     "scripts": {
         "dev": "concurrently \"npm run dev:electron\" \"npm run dev:renderer\"",
-        "dev:electron": "tsc -p electron/tsconfig.json --watch",
+        "dev:electron": "npx tsc -p tsconfig.json --watch",
         "dev:renderer": "vite",
         "build": "tsc && vite build",
-        "build:electron": "tsc -p electron/tsconfig.json",
+        "build:electron": "tsc -p tsconfig.json",
         "pack": "npm run build && npm run build:electron && electron-builder",
         "preview": "vite preview"
     },
@@ -27,31 +27,34 @@
             ]
         }
     },
-    "dependencies": {
-        "@radix-ui/react-alert-dialog": "^1.0.5",
-        "lucide-react": "^0.263.1",
-        "pdf-parse": "^1.1.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss-animate": "^1.0.7"
-    },
     "devDependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-progress": "^1.1.2",
-        "@types/node": "^20.11.0",
-        "@types/react": "^18.2.48",
-        "@types/react-dom": "^18.2.18",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.17",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/jest": "^29.5.14",
+        "@types/react": "^19.0.8",
+        "@types/react-dom": "^19.0.3",
+        "@types/testing-library__jest-dom": "^6.0.0",
+        "axios": "^1.7.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "concurrently": "^8.2.2",
-        "electron": "^25.9.8",
-        "electron-builder": "^25.1.8",
-        "postcss": "^8.4.33",
+        "electron": "^34.1.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "lucide-react": "^0.475.0",
+        "pdf-parse": "^1.1.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-jsx": "^1.0.0",
         "tailwind-merge": "^3.0.1",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss-animate": "^1.0.7",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
         "tsc": "^2.0.4",
         "typescript": "^5.7.3",
-        "vite": "^5.0.12"
+        "vite": "^6.1.0"
     }
 }
