Refactor project structure, update TypeScript and Babel configurations, and enhance PDF processing functionality

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -17,6 +17,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "types": [
+      "jest",
+      "node",
       "vite/client"
     ]
   },
@@ -25,7 +27,7 @@
   ],
   "references": [
     {
-      "path": "./tsconfig.node.json"
+      "path": "../tsconfig.node.json"
     }
   ]
 }
