--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "main": "electron/main.ts",
     "scripts": {
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
         "dev": "concurrently \"npm run dev:electron\" \"npm run dev:renderer\"",
         "dev:electron": "npx tsc -p tsconfig.json --watch",
         "dev:renderer": "vite",
@@ -34,27 +37,47 @@
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
         "@types/jest": "^29.5.14",
+        "@types/pdf-parse": "^1.1.4",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@types/testing-library__jest-dom": "^6.0.0",
+        "@vitejs/plugin-react": "^4.3.4",
         "axios": "^1.7.9",
+        "babel": "^6.23.0",
+        "babel-cli": "^6.26.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "electron": "^34.1.1",
+        "electron-builder": "^25.1.8",
+        "execa": "^0.5.1",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "latest-version": "^3.1.0",
         "lucide-react": "^0.475.0",
+        "minimist": "^1.2.8",
+        "mkdirp": "^1.0.4",
+        "npx": "^3.0.0",
+        "os-locale": "^2.0.0",
+        "package-json": "^4.0.1",
+        "pdf-lib": "^1.17.1",
         "pdf-parse": "^1.1.1",
+        "rc": "^1.2.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-jsx": "^1.0.0",
+        "semver": "^5.3.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "tsc": "^2.0.4",
         "typescript": "^5.7.3",
-        "vite": "^6.1.0"
+        "update-notifier": "^2.1.0",
+        "uuid": "^11.0.5",
+        "vite": "^6.1.0",
+        "y18n": "^3.2.1",
+        "yargs": "^8.0.1",
+        "yargs-parser": "^7.0.0"
     }
 }
