--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,7 +19,7 @@
     "types": ["vite/client", "node"],
   },
   "include": [
-    "vite.config.ts", 
+    "config/vite.config.ts", 
     "electron",
     "src"
   ],
