--- a/package.json
+++ b/package.json
@@ -49,22 +49,22 @@
         "clsx": "^2.1.1",
         "electron": "^34.1.1",
         "electron-builder": "^25.1.8",
-        "execa": "^0.5.1",
+        "execa": "^9.5.2",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "latest-version": "^3.1.0",
+        "jest-globals": "^0.1.7",
+        "latest-version": "^9.0.0",
         "lucide-react": "^0.475.0",
         "minimist": "^1.2.8",
         "mkdirp": "^1.0.4",
         "npx": "^3.0.0",
-        "os-locale": "^2.0.0",
-        "package-json": "^4.0.1",
+        "os-locale": "^6.0.2",
+        "package-json": "^10.0.1",
         "pdf-lib": "^1.17.1",
         "pdf-parse": "^1.1.1",
         "rc": "^1.2.1",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0",
         "react-jsx": "^1.0.0",
         "semver": "^5.3.0",
         "tailwind-merge": "^3.0.1",
@@ -73,11 +73,11 @@
         "ts-node": "^10.9.2",
         "tsc": "^2.0.4",
         "typescript": "^5.7.3",
-        "update-notifier": "^2.1.0",
+        "update-notifier": "^7.3.1",
         "uuid": "^11.0.5",
         "vite": "^6.1.0",
         "y18n": "^3.2.1",
-        "yargs": "^8.0.1",
-        "yargs-parser": "^7.0.0"
+        "yargs": "^17.7.2",
+        "yargs-parser": "^21.1.1"
     }
 }
